--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       src="https://kit.fontawesome.com/c8e4d183c2.js"
       crossorigin="anonymous"
     ></script>
+    <script src="index.js"></script>
   </head>
   <body>
     <section id="landing">
@@ -21,6 +22,25 @@
             <li><a href="#" class="nav__link">Contact</a></li>
             <li><a href="#" class="nav__link nav__link--primary">Books</a></li>
           </ul>
+          <button class="btn__menu" onclick="openMenu()">
+            <i class="fas fa-bars"></i>
+          </button>
+          <div class="menu__backdrop">
+            <button class="btn__menu btn__menu--close" onclick="closeMenu()">
+              <i class="fas fa-times"></i>
+            </button>
+            <ul class="menu__links">
+              <li class="menu__list">
+                <a href="#" class="menu__link" onclick="closeMenu()">Home</a>
+              </li>
+              <li class="menu__list">
+                <a href="#features" class="menu__link" onclick="closeMenu()">Books</a>
+              </li>
+              <li class="menu__list">
+                <a class="menu__link no-cursor" onclick="closeMenu()">Contact</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </nav>
       <header>
@@ -30,7 +50,9 @@
             <h2>
               Find your dream book with <span class="purple">Library</span>
             </h2>
-            <button class="btn">Browse Books</button>
+            <a href="#features">
+              <button class="btn">Browse Books</button>
+            </a>
           </div>
           <figure class="header__image-wrapper">
             <img src="/assets/Undraw_Books.svg" alt="" />
@@ -298,20 +320,20 @@
         </div>
       </section>
 
-<section id="explore__more">
-  <div class="container">
-    <div class="row">
-      <h2 class="section__title">
-        Explore more <span class="purple">Books</span>
-      </h2>
-      <div class="btn__wrapper">
-        <a href="#features">
-          <button class="btn">Browse Books</button>
-        </a>
-      </div>
-    </div>
-  </div>
-</section>
+      <section id="explore__more">
+        <div class="container">
+          <div class="row">
+            <h2 class="section__title">
+              Explore more <span class="purple">Books</span>
+            </h2>
+            <div class="btn__wrapper">
+              <a href="#features">
+                <button class="btn">Browse Books</button>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
@@ -319,7 +341,7 @@
         <div class="row row__column">
           <a href="#">
             <figure class="footer__logo">
-              <img src="./assets/Library.svg" alt="" class="footer__logo-img">
+              <img src="./assets/Library.svg" alt="" class="footer__logo-img" />
             </figure>
           </a>
           <div class="footer__list">
@@ -333,5 +355,4 @@
       </div>
     </footer>
   </body>
-
 </html>
